--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="center"><a href="Transformative_Quadrannial.html"><img src="weblogo1.jpg" style="height: 350px ; width: 350px; margin:5px; border:5px solid black; "></a></div>
         <div class="rightmiddle">
         <div><a href="Pindex1.html"><img src="industry_experts_insights.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "></a></div>
-        <div><img src="integration_with_sdg.jpg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></div>
+        <div><img src="research image.jpeg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></div>
         </div>
         </div>
         <div class="downlogos" style="margin-bottom: 20px;">
