--- a/PIndex2.html
+++ b/PIndex2.html
@@ -34,6 +34,10 @@
             padding:5px;
             margin-left: 5px;
             margin-right: 5px;
+            background-color: skyblue;
+        }
+        .button:hover{
+            background-color:#007bff ;
         }
     *{
         margin: 0;
@@ -48,14 +52,14 @@
 <body>
     <h1 align="center" style="background-color: #316970; padding: 10px; color: white;">Year Wise Plans</h1>
     <div class="buttonsbody">
-        <a href="index.html"><button class="button"  style="background-color:#007bff; color:white; border-radius:10px;">Home</button></a>
-        <a href="Mcp.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Career paths</button></a>
-        <a href="GJMT.html"><button class="button" style="background-color: #007bff;color:white; border-radius:10px;">Job Market Trends</button></a>
-        <a href="Mpk.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Practical Knowledge</button></a>
-        <a href="Ysdg.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">SDG integration</button></a>
-        <a href="gctafs.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Call-to-Action</button></a>
-        <a href="Yind.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Inclusive Design</button></a>
-        <a href="Pindex1.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Industry Expert Insights</button></a>
+        <a href="index.html"><button class="button"  style=" color:white; border-radius:10px;">Home</button></a>
+        <a href="Mcp.html"><button class="button" style=" color:white; border-radius:10px;">Career paths</button></a>
+        <a href="GJMT.html"><button class="button" style="color:white; border-radius:10px;">Job Market Trends</button></a>
+        <a href="Mpk.html"><button class="button" style=" color:white; border-radius:10px;">Practical Knowledge</button></a>
+        <a href="Ysdg.html"><button class="button" style=" color:white; border-radius:10px;">SDG integration</button></a>
+        <a href="gctafs.html"><button class="button" style=" color:white; border-radius:10px;">Call-to-Action</button></a>
+        <a href="Yind.html"><button class="button" style=" color:white; border-radius:10px;">Inclusive Design</button></a>
+        <a href="Pindex1.html"><button class="button" style=" color:white; border-radius:10px;">Industry Expert Insights</button></a>
     </div>
     <p style="margin: 15px; border: 2px solid black; text-align: center; "><b>A roadmap is crucial because it acts as a visual representation of a project's goals, timeline, and milestones, ensuring everyone involved understands the overall vision, priorities, and steps
          needed to reach the desired outcome, facilitating clear communication, alignment among stakeholders, and effective project execution by identifying potential risks and dependencies early on while allowing for
@@ -75,6 +79,23 @@
         <a href="PSubIndex2_5.html"><button style="margin-top: 45px; margin-left: 480px;  background-color: gray; padding: 5px; border-radius: 20px;">Application development</button></a>
         <a href="PSubIndex2_6.html"><button style="margin-top: 45px;background-color: gray; padding: 5px; border-radius: 20px;">Software development</button></a>
     </div>
+    <br>
+    <br>
+    <br>
+    <div align="center" style="font-weight: bold;font-size: 25px;background-color: #316970;">
+        <p>To Study This topics you can refere to this Websites </p>
+        <a href="https://www.w3schools.com/" style="color:white">W3 schools</a>
+        <a href=""></a>
+        <p>TO practice basic topics and there questions:</p>
+        <div style="background-color: #316970;">
+        <a href="https://www.hackerrank.com/" style="color: white;">hackerrank</a><br>
+        <a href="https://leetcode.com/" style="color: white;" >leetcode</a><br>
+        <a href="https://codeforces.com/" style="color: white;">codeforces</a><br>
+        <a href="https://www.geeksforgeeks.org/" style="color: white;">geeksforgeeks</a><br>
+        <a href="https://www.codechef.com/" style="color: white;">codechef</a><br>
+    </div>
+    </div><br>
+    <hr>
 
 </body>
 </html>     
