--- a/PSubIndex2_1.html
+++ b/PSubIndex2_1.html
@@ -14,34 +14,40 @@
     display: flex;
     flex-direction: row;
     padding: 15px;
-    background-color:#3d8774 ;
+    background-color:#E2C2C6 ;
     justify-content: center;
 }
 .button{
   padding:5px;
   margin-left: 5px;
   margin-right: 5px;
+  background-color: #E2C2C6;
+  transition: 0.5s;
+        }
+        .button:hover{
+          background-color: #B9929F;
         }
     </style>
 </head>
-<body style="background-color: #24d7a9">
-  <h1 align="center" style="background-color:#069671 ; color: white; padding: 10px;">4 Year Roadmap for AI/ML</h1>
+<body style="background-color: #E2C2C6">
+  <h1 align="center" style="background-color:#B9929F ; color: white; padding: 10px;">4 Year Roadmap for AI/ML</h1>
   <div class="buttonsbody">
-    <a href="index.html"><button class="button"  style="background-color: #069671 ; color:white; border-radius:10px;">Home</button></a>
-    <a href="PIndex2.html"><button class="button"  style="background-color: #069671 ; color:white; border-radius:10px;">Roadmap</button></a>
-    <a href="PSubIndex2_3.html"><button class="button" style="background-color:#069671 ; color:white; border-radius:10px;">Data Analyst</button></a>
-    <a href="PSubIndex2_2.html"><button class="button" style="background-color: #069671 ;color:white; border-radius:10px;">Cybersecurity</button></a>
-    <a href="PSubIndex2_5.html"><button class="button" style="background-color: #069671 ; color:white; border-radius:10px;">App Development</button></a>
-    <a href="PSubIndex2_4.html"><button class="button" style="background-color:#069671 ; color:white; border-radius:10px;">Freelancing</button></a>
-    <a href="PSubIndex2_6.html"><button class="button" style="background-color:#069671 ;color:white; border-radius:10px;">Software Development</button></a>
+    <a href="index.html"><button class="button"  style="  color:white; border-radius:10px;">Home</button></a>
+    <a href="PIndex2.html"><button class="button"  style=" color:white; border-radius:10px;">Roadmap</button></a>
+    <a href="PSubIndex2_3.html"><button class="button" style=" color:white; border-radius:10px;">Data Analyst</button></a>
+    <a href="PSubIndex2_2.html"><button class="button" style="color:white; border-radius:10px;">Cybersecurity</button></a>
+    <a href="PSubIndex2_5.html"><button class="button" style=" color:white; border-radius:10px;">App Development</button></a>
+    <a href="PSubIndex2_4.html"><button class="button" style=" color:white; border-radius:10px;">Freelancing</button></a>
+    <a href="PSubIndex2_6.html"><button class="button" style="color:white; border-radius:10px;">Software Development</button></a>
 </div>
 <p style="margin: 10px; text-align: center; border: 2px solid black; color: black;">
   A 4-year AI/ML roadmap should start with foundational knowledge in programming, mathematics, and core ML concepts, gradually progressing to advanced techniques 
   like deep learning, natural language processing (NLP), computer vision, and reinforcement learning, while consistently focusing
    on practical application and staying updated with the latest advancements in the field; key phases include:
     foundational learning (Year 1), intermediate ML skills (Year 2), deep learning expertise (Year 3), and specialization with real-world projects (Year 4). </p>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #069671; color:black;  color: white;">
+    <div style="margin: 10px; border: 2px dashed black;background-color: #B9929F; color:black;  color: white;overflow: auto;">
   <h2>Year 1: Foundational Learning</h2>
+  <img src="1stYearAI.png"  style="width: 350px;margin-top: -35px;" alt="image" align="right" >
     <h3>Programming Basics</h3>
       Master a language like Python with strong data structures and algorithms. 
       Basic understanding of another language like C++ for performance-critical applications. 
@@ -56,8 +62,9 @@
     Simple classification tasks (e.g., spam email detection)<br>
     Regression analysis (e.g., predicting housing prices)<br>
     </div>
-    <div style="margin: 10px; border: 2px dashed black; color: black;">
+    <div style="margin: 10px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 2:Intermediate ML Skills</h2>
+    <img src="2ndYearAI.png"  style="width: 350px;margin-top: -35px;" alt="image" align="right" >
     <h3>Advanced Machine Learning Algorithms</h3>
     Decision Trees<br>
     Random Forests<br>
@@ -75,8 +82,9 @@
     Sentiment analysis on text data<br>
     Image classification with basic CNNs<br>
     </div>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #069671; color:black;  color: white;">
+    <div style="margin: 10px; border: 2px dashed black;background-color: #B9929F; color:black;  color: white;overflow: auto ;">
     <h2>Year 3: Deep Learning Expertise</h2>
+    <img src="3rdYearAI.png"  style="width: 350px;margin-top: -35px;" alt="image" align="right" >
     <h3>Deep Learning Architectures</h3>
     Convolutional Neural Networks (CNNs)<br>
     Recurrent Neural Networks (RNNs)<br>
@@ -96,8 +104,9 @@
       Generating text with a language model<br>
       Image-to-text translation <br>
       </div>
-      <div style="margin: 10px; border: 2px dashed black; color: black;">
+      <div style="margin: 10px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 4: Specialization and Real-World Applications</h2>
+    <img src="4thYearAI.png"  style="width: 350px;margin-top: -35px;" alt="image" align="right" >
     <h3>Advanced Topics</h3>
       Reinforcement Learning<br>
       Explainable AI (XAI)<br>
@@ -112,7 +121,7 @@
     <h3>Capstone Project</h3>
     Develop a complex AI system with real-world data, addressing ethical considerations and deployment challenges 
     </div>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #069671; color:black;  color: white;">
+    <div style="margin: 10px; border: 2px dashed black;background-color: #B9929F; color:black;  color: white;">
 <h2>Key points to remember</h2>
 Continuous Learning:<br>
     Stay updated with the latest advancements in AI/ML by attending conferences, reading research papers, and participating in online communities<br>
