--- a/PSubIndex2_2.html
+++ b/PSubIndex2_2.html
@@ -14,36 +14,43 @@
             display: flex;
             flex-direction: row;
             padding: 15px;
-            background-color: rgb(182, 255, 189);
+            background-color: #D4C5C7;
             justify-content: center;
         }
         .button{
             padding:5px;
             margin-left: 5px;
             margin-right: 5px;
+            background-color: #D4C5C7;
+            transition: 0.5s;
+        }
+        .button:hover{
+          background-color: #B9A394;
         }
     </style>
   </head>
-  <body style="background-color: #a2f4a5;">
-    <h1 align="center" style="background-color: green ;  color: white; padding: 10px;">4 Year Road Map For Cyber Security</h1>
+  <body style="background-color: #D4C5C7">
+    <h1 align="center" style="background-color: #B9A394 ;  color: black; padding: 10px;">4 Year Road Map For Cyber Security</h1>
     <div class="buttonsbody">
-      <a href="index.html"><button class="button"  style="background-color: green; color:white; border-radius:10px;">Home</button></a>
-      <a href="PIndex2.html"><button class="button"  style="background-color: green; color:white; border-radius:10px;">Roadmap</button></a>
-      <a href="PSubIndex2_1.html"><button class="button" style="background-color:green; color:white; border-radius:10px;">AI/ML</button></a>
-      <a href="PSubIndex2_3.html"><button class="button" style="background-color: green;color:white; border-radius:10px;">Data Analyst</button></a>
-      <a href="PSubIndex2_5.html"><button class="button" style="background-color: green; color:white; border-radius:10px;">App Development</button></a>
-      <a href="PSubIndex2_4.html"><button class="button" style="background-color:green; color:white; border-radius:10px;">Freelancing</button></a>
-      <a href="PSubIndex2_6.html"><button class="button" style="background-color:green; color:white; border-radius:10px;">Software Development</button></a>
+      <a href="index.html"><button class="button"  style=" color:black; border-radius:10px;">Home</button></a>
+      <a href="PIndex2.html"><button class="button"  style=" color:black; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style=" color:black; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style="color:black; border-radius:10px;">Data Analyst</button></a>
+      <a href="PSubIndex2_5.html"><button class="button" style=" color:black; border-radius:10px;">App Development</button></a>
+      <a href="PSubIndex2_4.html"><button class="button" style=" color:black; border-radius:10px;">Freelancing</button></a>
+      <a href="PSubIndex2_6.html"><button class="button" style=" color:black; border-radius:10px;">Software Development</button></a>
   </div>
     <p style="margin: 10px; text-align: center; border: 2px solid black;">
+     
       A 4-year cybersecurity roadmap typically involves starting with
       foundational knowledge, progressing to technical skills like network
       security and penetration testing, acquiring relevant certifications, and
       eventually aiming for advanced roles like security architect or incident
       response manager, depending on your career path and interests.
     </p>
-    <div style="margin: 10px; border: 2px dashed black;background-color: rgb(32, 173, 32) ; color:white">
+    <div style="margin: 10px; border: 2px dashed black;background-color: #B9A394 ; color:black;overflow: auto;">
     <h2 style="margin-left: 3px;">Year 1: Fundamentals and Basic Skills</h2>
+    <img src="1stYearCS.png" style="width: 300px;margin-top: -35px;" alt="image" align="right">
       <p style="margin-left: 3px;">
         Focus on foundational concepts: Learn core cybersecurity principles like
         network security, cryptography, access control, malware analysis, and
@@ -63,8 +70,9 @@
         Hack The Box to simulate real-world hacking scenarios.
       </p>
     </div>
-    <div style="margin: 10px; border: 2px dashed black;">
+    <div style="margin: 10px; border: 2px dashed black;overflow: auto;">
     <h2>Year 2: Deepening Technical Expertise</h2>
+    <img src="2ndYearCS.png" style="width: 300px;margin-top: -35px;" alt="image" align="right">
     <p style="margin-left: 3px;">
         Advanced network security: Explore topics like firewalls, intrusion
         detection/prevention systems (IDS/IPS), VPNs, and network segmentation.
@@ -87,8 +95,9 @@
         penetration testing or vulnerability scanning.
       </p>
     </div>
-    <div style="margin: 10px; border: 2px dashed black;background-color: rgb(32, 173, 32) ; color:white">
+    <div style="margin: 10px; border: 2px dashed black;background-color: #B9A394 ; color:black;overflow: auto;">
     <h2>Year 3: Specializing in a Domain</h2>
+    <img src="3rdYearCS.png" style="width: 300px;margin-top: -35px;" alt="image" align="right">
       <p style="margin-left: 3px;">
         Choose a specialization: Select a focus area like threat intelligence,
         security architecture, cloud security, or red teaming based on your
@@ -112,8 +121,9 @@
         attend conferences, and build professional connections.
       </p>
       </div>
-      <div style="margin: 10px; border: 2px dashed black;">
+      <div style="margin: 10px; border: 2px dashed black;overflow: auto;">
     <h2>Year 4: Leadership and Career Advancement</h2>
+    <img src="4thYearCS.png" style="width: 300px;margin-top: -35px;" alt="image" align="right">
       <p style="margin-left: 3px;">
         Management skills: Learn how to manage security teams, budget planning,
         and security policy development.
@@ -136,7 +146,7 @@
         leadership.
       </p>
     </div>
-    <div style="margin: 10px; border: 2px dashed black; background-color: rgb(32, 173, 32) ; color:white">
+    <div style="margin: 10px; border: 2px dashed black; background-color:#B9A394 ; color:black">
     <h3>Important Considerations</h3>
       <p style="margin-left: 3px;">
         Continuous learning: Cybersecurity is a rapidly evolving field, so
