--- a/PSubIndex2_6.html
+++ b/PSubIndex2_6.html
@@ -14,25 +14,30 @@
     display: flex;
     flex-direction: row;
     padding: 15px;
-    background-color:#708090;
+    background-color:#A9A9A9;
     justify-content: center;
 }
 .button{
   padding:5px;
   margin-left: 5px;
   margin-right: 5px;
+  background-color: #d3d3d3;
+  transition: 0.5s;
+        }
+        .button:hover{
+          background-color: #A9A9A9 ;
         }
 </style>
-  <body style="background-color: #848884;">
+  <body style="background-color: #A9A9A9;">
     <h1 align="center" style= "background-color: #848884; padding: 10px; color: white;">4 Year Roadmap for Software Development</h1>
     <div class="buttonsbody">
-      <a href="index.html"><button class="button"  style="background-color: #A9A9A9; color:black ;border-radius:10px;">Home</button></a>
-      <a href="PSubIndex2_2.html"><button class="button"  style="background-color: #A9A9A9; color:black; border-radius:10px;">Roadmap</button></a>
-      <a href="PSubIndex2_1.html"><button class="button" style="background-color:#A9A9A9; color:black; border-radius:10px;">AI/ML</button></a>
-      <a href="PSubIndex2_2.html"><button class="button" style="background-color: #A9A9A9;color:black; border-radius:10px;">Cybersecurity</button></a>
-      <a href="PSubIndex2_5.html"><button class="button" style="background-color: #A9A9A9; color:black; border-radius:10px;">App Development</button></a>
-      <a href="PSubIndex2_4.html"><button class="button" style="background-color:#A9A9A9; color:black; border-radius:10px;">Freelancing</button></a>
-      <a href="PSubIndex2_3.html"><button class="button" style="background-color:#A9A9A9;color:black; border-radius:10px;">Data Analyst</button></a>
+      <a href="index.html"><button class="button"  style=" color:black ;border-radius:10px;">Home</button></a>
+      <a href="PSubIndex2_2.html"><button class="button"  style=" color:black; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style=" color:black; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="color:black; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_5.html"><button class="button" style=" color:black; border-radius:10px;">App Development</button></a>
+      <a href="PSubIndex2_4.html"><button class="button" style=" color:black; border-radius:10px;">Freelancing</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style="color:black; border-radius:10px;">Data Analyst</button></a>
   </div>
   <p style="margin: 10px; text-align: center; border: 2px solid black; color: white;">
       A 4-year software development roadmap could include: Year 1: Foundational
@@ -43,23 +48,25 @@
       taking on more leadership responsibilities within a chosen specialization
       area.
     </p>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3; color:black">
+    <div style="font-size: 18px; border: 2px dashed black;background-color:#d3d3d3; color:black;overflow: auto;">
     <h2>Year 1: Foundational Skills and Project Experience</h2>
-        Core Programming Languages: Mastering a primary programming language
+    <img align="right" src="1stYearSD.png" style="width: 300px;margin-top: -35px;" alt="image">
+       <p> Core Programming Languages: Mastering a primary programming language
         like Python, Java, JavaScript depending on your desired career path.
         Data Structures and Algorithms: Understanding fundamental data
         structures (arrays, linked lists, trees) and algorithms (sorting,
-        searching) to solve problems efficiently.
-        Front-End Development (if applicable): HTML, CSS, JavaScript frameworks
+        searching) to solve problems efficiently.</p>
+        <p>Front-End Development (if applicable): HTML, CSS, JavaScript frameworks
         (React, Angular, Vue) for building user interfaces.
         Back-End Development (if applicable): Database technologies (SQL,
-        NoSQL), API design, backend frameworks (Node.js, Django, Spring Boot).
-        Version Control: Git for managing code changes and collaboration.
+        NoSQL), API design, backend frameworks (Node.js, Django, Spring Boot).</p>
+        <p>Version Control: Git for managing code changes and collaboration.
         Project Development: Building small to medium-sized personal projects to
-        apply learned concepts and showcase your skills.
+        apply learned concepts and showcase your skills.</p>
         </div>
-        <div style="margin: 10px; border: 2px dashed black; color: white;">
+        <div style="font-size: 18px; border: 2px dashed black; color: white;overflow: auto;">
     <h2>Year 2: Deepening Expertise and Specialization</h2>
+    <img align="right" src="2ndYearSD.png" style="width: 300px;margin-top: -35px;" alt="image">
         Advanced Concepts: Diving deeper into advanced programming concepts like
         object-oriented programming, design patterns, concurrency, and
         asynchronous programming.
@@ -73,8 +80,9 @@
         Contribution to Open Source: Contributing to open-source projects to
         gain real-world experience and collaborate with other developers.
         </div>
-        <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3; color:black">
+        <div style="font-size: 18px; margin: 10px; border: 2px dashed black;background-color: #d3d3d3; color:black ;overflow: auto;">
     <h2>Year 3: Leadership and Complex Project Management</h2>
+    <img align="right" src="3rdYearSD.png" style="width: 300px;margin-top: -35px;" alt="image">
         Team Collaboration: Leading small development teams, managing project
         timelines, and facilitating effective communication.
         Agile Methodologies: Implementing Agile practices like Scrum and Kanban
@@ -85,8 +93,9 @@
         efficiency.
      Mentorship: Providing guidance and support to junior developers.
   </div>
-  <div style="margin: 10px; border: 2px dashed black; color: white;">
+  <div style="font-size: 18px; margin: 10px; border: 2px dashed black; color: white;overflow: auto;">
     <h2>Year 4: Advanced Technical Skills and Industry Impact</h2>
+    <img align="right" src="4thYearSD.png" style="width: 300px;margin-top: -35px;" alt="image">
         Emerging Technologies: Exploring and adopting new technologies like
         blockchain, AI, AR/VR as they mature.
         DevOps Practices: Integrating DevOps principles like continuous
@@ -99,7 +108,7 @@
         Technical Leadership: Taking on technical leadership roles, driving
         architecture decisions and technical strategy.
         </div>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3 ; color:black">
+    <div style="font-size: 18px; margin: 10px; border: 2px dashed black;background-color: #d3d3d3 ; color:black">
     <h3>Important Considerations:</h3>
         Continuous Learning: Regularly update your skills by attending
         workshops, online courses, and following industry trends.
