--- a/Pindex1.html
+++ b/Pindex1.html
@@ -75,7 +75,8 @@ body {
     </p>
     <div style="margin:10px; border:5px dotted blue ; background-color: #89CFF0;">
     <h2 style="margin:10px ; color:#00008B;" >1)AI & Data Science (ML Engineer, Data Scientist, AI Researcher)</h2>
-    <p style="margin:10px">
+    <img src="jeff.jpeg" alt="image1" style="float: right;border:double; " width="500px" >
+    <p style="margin:10px;" >
       According to industry experts, an AI/ML engineer needs a strong foundation
       in programming, mathematics, and data management, along with the ability
       to creatively solve problems, understand iterative processes, and develop
@@ -316,6 +317,7 @@ body {
     </div>
     <div style="margin:10px; border:5px dotted blue ; ">
     <h2 style="margin:10px">4)Robotics</h2>
+    <img src="boy-resized-img.webp" alt="image1" style="float: right; " width="400px" >
     <p style="margin:10px">
       According to industry experts, students interested in robotics should
       focus on developing a strong foundation in computer science, mechanical
@@ -354,8 +356,8 @@ body {
         programming robots.
       </li>
       <h3>Specific areas of focus for quantum developers and researchers:</h3>
-    </ol>
-    <ol>
+    
+    
       <li>
         Autonomous vehicles: Development of self-driving cars and other
         autonomous transportation systems.
@@ -528,5 +530,6 @@ body {
     </ol>
     </div>
     <footer align="center" style="padding: 10px;background-color: skyblue;"><p>© Transformative Quadranial : 2025</p></footer>
+    <script src="Pindex1.js"></script>
   </body>
 </html>
