--- a/PSubIndex2_4.html
+++ b/PSubIndex2_4.html
@@ -13,28 +13,33 @@
             display: flex;
             flex-direction: row;
             padding: 15px;
-            background-color:rgb(255, 134, 134);
+            background-color:#BCAA99;
             justify-content: center;
         }
         .button{
             padding:5px;
             margin-left: 5px;
             margin-right: 5px;
+            background-color: #BCAA99;
+            transition: 0.5s;
+        }
+        .button:hover{
+          background-color: #443850;
         }
     </style>
   </head>
-  <body style="background-color: #cb5d5d;">
-    <h1 align="center" style="background-color: #ef2121; padding: 10px; color: white;">4 Year Rodamap For Freelancing</h1>
+  <body style="background-color: #BCAA99">
+    <h1 align="center" style="background-color: #443850; padding: 10px; color: white;">4 Year Rodamap For Freelancing</h1>
     <div class="buttonsbody">
-      <a href="index.html"><button class="button"  style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">Home</button></a>
-      <a href="PIndex2.html"><button class="button"  style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">Roadmap</button></a>
-      <a href="PSubIndex2_1.html"><button class="button" style="background-color:rgb(255, 1, 1); color:white; border-radius:10px;">AI/ML</button></a>
-      <a href="PSubIndex2_2.html"><button class="button" style="background-color: rgb(255, 1, 1);color:white; border-radius:10px;">Cybersecurity</button></a>
-      <a href="PSubIndex2_5.html"><button class="button" style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">App Development</button></a>
-      <a href="PSubIndex2_3.html"><button class="button" style="background-color:rgb(255, 1, 1); color:white; border-radius:10px;">Data Analyst</button></a>
-      <a href="PSubIndex2_6.html"><button class="button" style="background-color:rgb(255, 1, 1);color:white; border-radius:10px;">Software Development</button></a>
+      <a href="index.html"><button class="button"  style=" color:white; border-radius:10px;">Home</button></a>
+      <a href="PIndex2.html"><button class="button"  style="color:white; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style=" color:white; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="color:white; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_5.html"><button class="button" style=" color:white; border-radius:10px;">App Development</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style=" color:white; border-radius:10px;">Data Analyst</button></a>
+      <a href="PSubIndex2_6.html"><button class="button" style="color:white; border-radius:10px;">Software Development</button></a>
   </div>
-    <p style="margin: 5px; border: 2px solid black; color: white;">
+    <p style="margin: 5px; border: 2px solid black; color: black;">
       A 4-year freelance roadmap could involve: Year 1 - Establishing your
       foundation by identifying your niche, building your online presence, and
       securing initial clients on freelance platforms; Year 2 - Focusing on
@@ -47,8 +52,9 @@
       high-quality work, client satisfaction, and continuous learning to stay
       competitive in your chosen field
     </p>
-    <div style="margin: 5px; border: 2px dashed black; background-color: #f84f4f; color: white;">
+    <div style="margin: 5px; border: 2px dashed black; background-color: #443850; color: white;overflow: auto;">
     <h2>Year 1: Building the Basics</h2>
+    <img align="right" src="1stYearFL.png" style="width: 300px;margin-top: -35px;" alt="image">
       <p>
         Identify your niche: Choose a specific skillset or area of expertise
         where you can stand out in the freelance market.
@@ -71,8 +77,9 @@
         demonstrate your capabilities to potential clients.
       </p>
     </div>
-    <div style="margin: 5px; border: 2px dashed black; color: white;">
+    <div style="margin: 5px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 2: Growth and Expansion</h2>
+    <img align="right" src="2ndYearFL.png" style="width: 300px;margin-top: -35px;" alt="image">
   
       <p>
         Refine your skillset: Invest in further education through online
@@ -95,8 +102,9 @@
         time, and communicating effectively with clients.
       </p>
     </div>
-    <div style="margin: 5px; border: 2px dashed black; background-color: #f84f4f; color: white;">
+    <div style="margin: 5px; border: 2px dashed black; background-color: #443850; color: white;overflow: auto;">
     <h2>Year 3: Diversification and Scaling</h2>
+    <img align="right" src="3rdYearFL.png" style="width: 300px;margin-top: -35px;" alt="image">
   
       <p>
         Explore new income streams: Consider offering additional services
@@ -120,8 +128,9 @@
         adapt your skillset accordingly.
       </p>
     </div>
-    <div style="margin: 5px; border: 2px dashed black; color: white;">
+    <div style="margin: 5px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 4: Expertise and Business Development</h2>
+    <img align="right" src="4thYearFL.png" style="width: 300px;margin-top: -35px;" alt="image">
   
       <p>Establish yourself as an expert:
         Become a thought leader in your niche by publishing content, speaking at events, or offering mentorship</p>
