--- a/PSubIndex2_5.html
+++ b/PSubIndex2_5.html
@@ -14,28 +14,33 @@
     display: flex;
     flex-direction: row;
     padding: 15px;
-    background-color:#C19A6B;
+    background-color:#BFD7EA;
     justify-content: center;
 }
 .button{
   padding:5px;
   margin-left: 5px;
   margin-right: 5px;
+  background-color: #BFD7EA;
+  transition: 0.2s;
+        }
+        .button:hover{
+          background-color: #508CA4;
         }
     </style>
   </head>
-  <body style="background-color:#B87333">
-    <h1 align="center" style="background-color: #6F4E37; padding:5px ; color:white">4 Year Roadmap For App Development</h1>
+  <body style="background-color:#BFD7EA">
+    <h1 align="center" style="background-color: x; padding:5px ; color:black">4 Year Roadmap For App Development</h1>
     <div class="buttonsbody">
-      <a href="index.html"><button class="button"  style="background-color: #6F4E37; color:white; border-radius:10px;">Home</button></a>
-      <a href="PIndex2.html"><button class="button"  style="background-color: #6F4E37; color:white; border-radius:10px;">Roadmap</button></a>
-      <a href="PSubIndex2_1.html"><button class="button" style="background-color:#6F4E37; color:white; border-radius:10px;">AI/ML</button></a>
-      <a href="PSubIndex2_2.html"><button class="button" style="background-color: #6F4E37;color:white; border-radius:10px;">Cybersecurity</button></a>
-      <a href="PSubIndex2_3.html"><button class="button" style="background-color: #6F4E37; color:white; border-radius:10px;">Data Analyst</button></a>
-      <a href="PSubIndex2_4.html"><button class="button" style="background-color:#6F4E37; color:white; border-radius:10px;">Freelancing</button></a>
-      <a href="PSubIndex2_6.html"><button class="button" style="background-color:#6F4E37;color:white; border-radius:10px;">Software Development</button></a>
+      <a href="index.html"><button class="button"  style=" color:black; border-radius:10px;">Home</button></a>
+      <a href="PIndex2.html"><button class="button"  style=" color:black; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style=" color:black; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="color:black; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style=" color:black; border-radius:10px;">Data Analyst</button></a>
+      <a href="PSubIndex2_4.html"><button class="button" style=" color:black; border-radius:10px;">Freelancing</button></a>
+      <a href="PSubIndex2_6.html"><button class="button" style="color:black; border-radius:10px;">Software Development</button></a>
   </div>
-  <p style="margin: 10px; text-align: center; border: 2px solid black; color: white;">
+  <p style="margin: 10px;font-size: 18px; text-align: center; border: 2px solid black; color: black;">
       A 4-year app development roadmap could look like this: Year 1:
       Foundational Learning and MVP Development - Focus on learning core
       programming languages, design principles, and building a Minimum Viable
@@ -48,24 +53,21 @@
       on marketing and user acquisition, maintain updates with new features and
       bug fixes, and adapt to emerging technologies
     </p>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black;  color: white;">
-    <h2>Year 1: Fundamentals and MVP</h2>
-        Learn essential programming languages: Depending on your platform (iOS,
-        Android, Web), learn languages like Swift/Objective-C, Java/Kotlin, or
-        JavaScript/React Native.
-        Master UI/UX design principles: Understand user interface design best
-        practices to create intuitive and user-friendly experiences.
-        Build a basic MVP: Develop a simplified version of your app with core
-        functionalities to test market viability and gather initial feedback.
-        Data storage and backend development: Choose a suitable database (e.g.,
-        Firebase, MongoDB) and set up a basic backend infrastructure to manage
-        data
-        Testing and quality assurance: Implement unit and integration testing to
-        ensure app stability.
-        </div>
-        <div style="margin: 10px; border: 2px dashed black; color: white;">
+    <div style="margin: 10px;font-size: 20px; border: 2px dashed black; background-color: #508CA4; color: white; overflow: auto;">
+      <h2>Year 1: Fundamentals and MVP</h2>
+      <img src="1stYear.png" align="right" style="width: 300px; float: right; margin-right: 20px;margin-top: -35px;" alt="image">
+      <p>Learn essential programming languages: Depending on your platform (iOS, Android, Web), learn languages like Swift/Objective-C, Java/Kotlin, or JavaScript/React Native.</p>
+      <p>Master UI/UX design principles: Understand user interface design best practices to create intuitive and user-friendly experiences.</p>
+      <p>Build a basic MVP: Develop a simplified version of your app with core functionalities to test market viability and gather initial feedback.</p>
+      <p>Data storage and backend development: Choose a suitable database (e.g., Firebase, MongoDB) and set up a basic backend infrastructure to manage data.</p>
+      <p>Testing and quality assurance: Implement unit and integration testing to ensure app stability.</p>
+  </div>
+  
+        
+        <div style="margin: 10px;font-size: 20px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 2: Feature Expansion and User Feedback</h2>
-        Gather user feedback: Actively collect feedback through surveys,
+    <img src="2ndYearAD.png"align="right" style="width: 300px;margin-top: -35px;" alt="image">
+       <p> Gather user feedback: Actively collect feedback through surveys,
         analytics, and user reviews to identify areas for improvement.
         Prioritize feature development: Analyze feedback and prioritize features
         based on user needs and business goals.
@@ -74,10 +76,12 @@
         Integrate advanced features: Add more complex functionalities as needed
         (e.g., push notifications, social logins, in-app purchases).
         Performance optimization: Improve app loading times and overall
-        performance.
+        performance. 
+      </p> 
         </div>
-        <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black ; color: white;">
+        <div style="margin: 10px;font-size: 20px; border: 2px dashed black;background-color: #508CA4; color:black ; color: white;overflow: auto;">
     <h2>Year 3: Scalability and Advanced Functionality</h2>
+    <img src="3rdYearAD.png" align="right" style="width: 300px;margin-top: -35px;"alt="image">
     Cloud integration:
       Utilize cloud services (e.g., AWS, Azure) to scale your app and handle increased user traffic.
             Data analytics:
@@ -89,15 +93,16 @@
                         Advanced features development:
                             Implement complex features based on your app's specific needs (e.g., AI integrations, machine learning).
     </div>
-    <div style="margin: 10px; border: 2px dashed black; color: white;">
+    <div style="margin: 10px;font-size: 20px; border: 2px dashed black; color: black;overflow: auto;">
     <h2>Year 4: Market Expansion and Maintenance</h2>
+    <img src="4thYearAD.png"align="right" style="width: 300px;margin-top: -35px;" alt="image">
         Marketing and user acquisition: Implement strategies to reach your target audience and acquire new users. 
         App store optimization (ASO): Optimize app listings on app stores to improve discoverability.
         Continuous updates and bug fixes: Regularly release updates to address user feedback, fix bugs, and add new features. 
         Monitor industry trends: Stay updated on emerging technologies and adapt your app accordingly. 
         Community building: Engage with users through support channels and foster a positive community around your app. 
         </div>
-    <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black ; color: white;">
+    <div style="font-size: 20px; margin: 10px; border: 2px dashed black;background-color: #508CA4; color:black ; color: white;">
     <h3>Important Considerations:</h3>
   
         Flexibility:
